--- a/src/client/assets/index.html
+++ b/src/client/assets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>SSR App</title>
+		<title>Destroy Asteroids</title>
 		<meta charset="UTF-8" />
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 	</head>
